@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-17T01:08:52Z",
+  "timestamp" : "2022-07-17T08:13:40Z",
   "count_outdated" : 396,
   "uniques_outdated" : 215,
-  "count" : 424,
+  "count" : 423,
   "uniques" : 229,
   "clones" : [
     {
       "timestamp": "2022-07-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
